src/test/resources/annotator/Proto3IllegalExtend.proto
syntax = "proto3";

package annotator;

import "google/protobuf/descriptor.proto";

<error descr="Extensions are not supported in proto3">extend google.protobuf.MessageOptions {

}</error>